Enhancement of head

--- a/lib/config.ini
+++ b/lib/config.ini
@@ -30,7 +30,7 @@ website_theme_color =  ; Format: #ffffff ou #fff
 website_css =
 website_css_disabled = false
 website_favicon =
-website_custom_head = "<link rel=\"stylesheet\" type=\"text/css\" href=\"lib/css/hint.css\">"
+website_custom_head = ""
 ; Only if no language :
 website_keywords = "keys"
 website_desc = "desc"
