Updated hamburger menu

--- a/lib/config.ini
+++ b/lib/config.ini
@@ -8,7 +8,7 @@ module_encrypt = false
 module_events = false
 module_files = true
 module_forum = false
-module_hamburger = false
+module_hamburger = true
 module_mail = false
 module_mongodb = false
 module_payment = false
