--- a/lib/config.ini
+++ b/lib/config.ini
@@ -4,7 +4,7 @@ module_admin = false
 module_captcha = false
 module_canvas = false
 module_cookies = true
-module_encrypt = false
+module_encrypt = true
 module_events = false
 module_files = true
 module_forum = false
