--- a/lib/config.ini
+++ b/lib/config.ini
@@ -27,7 +27,7 @@ website_default-maxperpage = 25
 website_dev = true
 ; Facultative
 website_theme_color =  ; Format: #ffffff ou #fff
-website_css =
+website_css = "./css/style.css"
 website_css_disabled = false
 website_favicon =
 website_custom_head = ""
